Update primogenitor, workflows, dependencies. Move tests source root.